add endpoints to swagger
